[package]
name = "arkaitzserv"
version = "0.1.1"
edition = "2021"
authors = ["Arkaitz <me@arkaitz.dev>"]
rust-version = "1.69"
description = "A lightweight web server intended for SPA deployments."
homepage = "https://github.com/arkaitz-dev/arkaitzserv"
repository = "https://github.com/arkaitz-dev/arkaitzserv"
documentation = "https://docs.rs/crate/arkaitzserv"
license = "MIT"
keywords = ["web", "server", "spa", "rocket"]
exclude = ["public/", "target"]

[package.metadata.docs.rs]
features = ["dir_source", "script_helper", "rust-embed"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
rocket = "0.5.0-rc.3"

[profile.release]
lto = true
codegen-units = 1
